salesforce/force-app/main/default/objects/Convex_OAuth_Settings__mdt/Convex_OAuth_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Stores Convex OAuth application credentials and connection state</description>
    <label>Convex OAuth Settings</label>
    <pluralLabel>Convex OAuth Settings</pluralLabel>
</CustomObject>