salesforce/force-app/main/default/objects/Convex_OAuth_Settings__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>OAuth Client ID from Convex Dashboard</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>