salesforce/force-app/main/default/objects/Convex_OAuth_Settings__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>OAuth Client Secret from Convex Dashboard (encrypted)</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>