salesforce/force-app/main/default/objects/Convex_OAuth_Settings__mdt/fields/Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URI__c</fullName>
    <description>OAuth callback URL registered with Convex</description>
    <label>Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>